--- a/index.html
+++ b/index.html
@@ -16,13 +16,28 @@
 
     <p style="font-family:Courier New;"> <img src= "ezgif.com-gif-maker.gif" alt= "Coding gif" style="width:400px;height:200px;float:right;">
         Hi! My name is Peter Koncelik, and I am currently a sophomore at Vanderbilt University studying Computer Science,
-        Applied Mathematics, and Classics. I have experience in front-end application development in Java, C++, and HTML/CSS,
-        while my passion for Mathematics ignites my curiosity in the intersection of Applied Mathematics, Data Analytics and
+        Applied Mathematics, and Classics. I have experience in full-stack development, having used front-end tools such as HTML/CSS and React.js,
+        extensive back-end development work in Node.js and SQL Server, and general-purpose proramming in Java, JavaScript, and C++. 
+        My passion for Mathematics ignites my curiosity in the intersection of Applied Mathematics, Data Analytics and
         Software Development. I also have an extensive interest in the world of Classical Rome and the Latin
         language. Below, you will see some of my work in these areas, my interests, and contact information. Other information,
         including past/present employment, extracurriculur involvement, etc. can be found on my resume below.
     </p>
     <br>
+    
+    <h2 style="font-family:Courier New;font-size:16px;">Work Experience</h2>
+    <p style="font-family:Courier New;">In addition to the projects below and my Computer Science courses in school, I worked as a Software Developer
+    Intern for MTD Products on the E-Commerce team in the Summer of 2019. Working across the Full Stack with a variety of tools, my projects primarily 
+    focused on both enhancements to preexisting client services within the MTD Products software base, as well as wholly-new projects aimed at benefitting 
+    the entire MTD Corporate IT branch. All work below primarily made use of Node.js, JavaScript, React.js, SQL Server, Oracle Database, XML/JSON Data formats: </p>
+    <ul style="font-family:Courier New;">
+        <li>Developing a client enhancement that sent out emails for errant orders in the online order system in an orderly manner, tracking order issues using a personal database.</li>
+        <li>Engineered an npm-installable module that loads configuration data into a triplet map data structure for constant-time access and intuitive data organization</li>
+        <!-- Link to this module!-->
+        <li>Enhanced the MTD products front-end web service with two synchronizoing applications that kept the XML master catalog up to date with online product listings, specifically for replacement parts and Epcot order service</li>
+        <li>Developed the base for a front-to back, full-stack order lookup hub for the entire MTD order process to track orders as they progress through the order process and encounter errors for easy correction.</li>
+    </ul>
+
     <h2 style="font-family:Courier New;font-size:16px;">My Projects</h2>
     <p style="font-family:Courier New;"> Below are README descriptions of the various projects I have worked on. <br>
         Their source code will be posted on a respectively linked GitHub in due time.</p>
@@ -30,7 +45,7 @@
         <li>Software allowing the operation of DNA <a href="DNAStrand.txt" target="_blank">Sequences</a></li>
         <li>Guitar simulation/composition <a href="READMEOLD7.txt" target="_blank">Software</a></li>
         <ul>
-            <li>I used it to make my own composition of the beginning of Mozart's "Marriage of Fiagro:</li>
+            <li>I used it to make my own composition of the beginning of Mozart's "Marriage of Fiagro":</li>
             <ul>
                 <li>Composition written as a <a href="song.txt" target="_blank"> .txt file</a></li>
                 <li>Program's conversion of .txt file into<a href="Figaro.dat" target="_blank"> .dat file</a></li>
@@ -39,11 +54,11 @@
         </ul>
         <li>Fully functional, user-friendly Boggle <a href="README10 copy.txt" target="_blank">Game</a></li>
     </ul>
-    <p style="font-family:Courier New;">I am also slowly developing an iOS application using Swift/JS/C++ Source Code.
-    The application will be a steadily-refining search algorithm, tentatively called PlayWhat?, that will locate a set of board games
-    to play based on specific criteria provided by the user. This criteria will include playtime, theme, complexity, etc.
-    To learn more about my hobby of boardgaming that inspired this project, visit <a href="https://boardgamegeek.com" target="_blank">this site.</a><br>
-    To more fully read up on my current project's ambitions and its progress, click <a href="WhatGame?.txt" target="_blank"> here.</a></p>
+    <p style="font-family:Courier New;">I am also devloping a web application using C++ (May be ported to JavaScript) and a React.js frontend UI 
+        that can scan lines of Latin poetry. The process of Latin scansion is often a complex, tedious, and difficult one. It is my hope that this
+        application will streamline the process for Latin students, who can instead focus on translation and interpretation rather than the 
+        tedium of scansion. 
+        To see the project repo, click <a href="https://github.com/petek222/LatinScansion.git" target="_blank">here.</a><br>
     <br><br>
     <h2 style="font-family:Courier New;font-size:16px;">Interests/Study in Mathematics</h2>
     <p style="font-family:Courier New;">My study in Mathematics is relatively diverse, but I have a preference for Calculus and Differential Equations <br>
