--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2 style="font-family:Courier New;font-size:16px;">Welcome to my Page!</h2>
 
     <p style="font-family:Courier New;"> <img src= "ezgif.com-gif-maker.gif" alt= "Coding gif" style="width:400px;height:200px;float:right;">
-        Hi! My name is Peter Koncelik, and I am currently a sophomore at Vanderbilt University studying Computer Science,
+        Hi! My name is Peter Koncelik, and I am currently a Junior at Vanderbilt University studying Computer Science,
         Applied Mathematics, and Classics. I have experience in full-stack development, having used front-end tools such as HTML/CSS and React.js,
         extensive back-end development work in Node.js and SQL Server, and general-purpose proramming in Java, JavaScript, and C++. 
         My passion for Mathematics ignites my curiosity in the intersection of Applied Mathematics, Data Analytics and
@@ -24,7 +24,7 @@
         including past/present employment, extracurriculur involvement, etc. can be found on my resume below.
     </p>
     <br>
-    
+
     <h2 style="font-family:Courier New;font-size:16px;">Work Experience</h2>
     <p style="font-family:Courier New;">In addition to the projects below and my Computer Science courses in school, I worked as a Software Developer
     Intern for MTD Products on the E-Commerce team in the Summer of 2019. Working across the Full Stack with a variety of tools, my projects primarily 
