--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
     <p style="font-family:Courier New;"> <img src= "ezgif.com-gif-maker.gif" alt= "Coding gif" style="width:400px;height:200px;float:right;">
         Hi! My name is Peter Koncelik, and I am currently a Junior at Vanderbilt University studying Computer Science,
-        Applied Mathematics, and Classics. I have experience in full-stack development, having used front-end tools such as HTML/CSS and React.js,
-        extensive back-end development work in Node.js and SQL Server, and general-purpose proramming in Java, JavaScript, and C++. 
+        Applied Mathematics, and Classics. I have experience in full-stack development, with extensive back-end development work 
+        in Node.js and MySQL and Oracle DB, front-end development with tools such as HTML/CSS and React.js, 
+        and general-purpose proramming in Java, JavaScript, and C++. 
         My passion for Mathematics ignites my curiosity in the intersection of Applied Mathematics, Data Analytics and
         Software Development. I also have an extensive interest in the world of Classical Rome and the Latin
         language. Below, you will see some of my work in these areas, my interests, and contact information. Other information,
@@ -29,20 +30,21 @@
     <p style="font-family:Courier New;">In addition to the projects below and my Computer Science courses in school, I worked as a Software Developer
     Intern for MTD Products on the E-Commerce team in the Summer of 2019. Working across the Full Stack with a variety of tools, my projects primarily 
     focused on both enhancements to preexisting client services within the MTD Products software base, as well as wholly-new projects aimed at benefitting 
-    the entire MTD Corporate IT branch. All work below primarily made use of Node.js, JavaScript, React.js, SQL Server, Oracle Database, XML/JSON Data formats: </p>
+    the entire MTD Corporate IT branch. All work below primarily made use of Node.js, JavaScript, React.js, SQL Server, Oracle Database, and XML/JSON Data formats: </p>
     <ul style="font-family:Courier New;">
         <li>Developing a client enhancement that sent out emails for errant orders in the online order system in an orderly manner, tracking order issues using a personal database.</li>
-        <li>Engineered an npm-installable module that loads configuration data into a triplet map data structure for constant-time access and intuitive data organization</li>
-        <!-- Link to this module!-->
-        <li>Enhanced the MTD products front-end web service with two synchronizoing applications that kept the XML master catalog up to date with online product listings, specifically for replacement parts and Epcot order service</li>
-        <li>Developed the base for a front-to back, full-stack order lookup hub for the entire MTD order process to track orders as they progress through the order process and encounter errors for easy correction.</li>
+        <li>Engineered an npm module that loads configuration data into a triplet map data structure for constant-time access and intuitive data organization</li>
+        <!--<ul style = "font-family:Courier New;">
+            <li></li>
+        </ul>-->
+        <li>Enhanced the MTD products front-end web service with two synchronizing applications that kept the company-wide XML master catalog up to date with online product listings, specifically for replacement parts and Epcot order service</li>
+        <li>Developed a front-to back, full-stack order lookup hub for the entire MTD order process to track orders as they progress through the order process and encounter errors for easy correction.</li>
     </ul>
 
     <h2 style="font-family:Courier New;font-size:16px;">My Projects</h2>
     <p style="font-family:Courier New;"> Below are README descriptions of the various projects I have worked on. <br>
         Their source code will be posted on a respectively linked GitHub in due time.</p>
     <ul style="font-family:Courier New;">
-        <li>Software allowing the operation of DNA <a href="DNAStrand.txt" target="_blank">Sequences</a></li>
         <li>Guitar simulation/composition <a href="READMEOLD7.txt" target="_blank">Software</a></li>
         <ul>
             <li>I used it to make my own composition of the beginning of Mozart's "Marriage of Fiagro":</li>
@@ -53,6 +55,7 @@
             </ul>
         </ul>
         <li>Fully functional, user-friendly Boggle <a href="README10 copy.txt" target="_blank">Game</a></li>
+        <li>An in-progress, Latin Scansion application aimed for student use (see below)</li>
     </ul>
     <p style="font-family:Courier New;">I am also devloping a web application using C++ (May be ported to JavaScript) and a React.js frontend UI 
         that can scan lines of Latin poetry. The process of Latin scansion is often a complex, tedious, and difficult one. It is my hope that this
@@ -66,7 +69,8 @@
     <ul style="font-family:Courier New;"> <!-- Add Links to these Lines! -->
         <li>Proof of the Orthogonality Principle for Legendre's Equation</li>
         <li>Proof of the unit-based functionality of the Dirac-Delta Function</li>
-        <li>The Butterfly Effect with respect to Differential Equations (I don't understand it, but I think its really cool)</li>
+        <li>Numerical analysis of the effect of employing the Fourier Transform in modeling discrepant, radio-wave like data trends</li> <!--Link to Matlab code here-->
+        <li>The Butterfly Effect with respect to Differential Equation Chaos Theory (I don't really understand it, but I think its really cool)</li>
         <ul>
             <li>Here is an interesting <a href= "https://fs.blog/2017/08/the-butterfly-effect/" target="_blank">article</a> on its generalities</li>
         </ul>
@@ -82,6 +86,7 @@
         <li>This Latin <a href="Mea Satura.pdf" target="_blank">Satire</a> I composed, with accompanying commentary and translation</li>
         <li>This historical <a href="Summus Potens Caesari.pdf" target="_blank"> analysis</a> of Julius Caesar's rise to power</li>
         <li>This artistic <a href="Ara Pacis Augustae.pdf" target="_blank"> interpretation</a> of Augustus Caesar's "Ara Pacis"</li>
+        <li>This <a href="" target = "_blank">analysis</a> of Roman Manhood with respect to Aeneas' ideological development in the "Aeneid"</li>
     </ul>
 
     <br>
@@ -90,10 +95,11 @@
         <li>Email: peter.e.koncelik@vanderbilt.edu</li>
         <li>Phone: 440-409-4313</li>
         <li><a href="Resume-5 copy.docx" target="_blank">Resume</a></li> <!-- LINK THIS-->
+        <li><a href="https://github.com/petek222" target="_blank">Github</a></li>
         <li><a href="https://www.linkedin.com/in/peter-koncelik-120734157/" target="_blank">Linkedin</a></li>
         <li><a href="https://www.instagram.com/pete_k22/" target="_blank">Instagram</a></li>
     </ul>
-    <p style="font-family:Courier New;font-size:8px">Note: This site was made by me using HTML14/CSS</p>
+    <p style="font-family:Courier New;font-size:8px">Note: This site was made by me using HTML5/CSS and JavaScript</p>
 
 
     <!-- OVERALL: ADD PICTURES/COLORS/ETC THROUGHOUT! MAKE IT LOOK GOOD!!!!!!!!!!!-->
